Images and Some Texts are changed

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
     <header>
         <div class="nav-container">
-            <div class="page-title">Header Logo</div>
+            <div class="page-title">Hagi Rose</div>
             <div class="nav">
                 <div class="nav-item">
                     Home
@@ -29,7 +29,7 @@
         <section>
             <div class="header-container">
                 <div class="header-section-description">
-                    <p class="heading1">This web site is awsome</p>
+                    <p class="heading1">Hagi Rose Flower Production </p>
                     <p class="heading1-descripton">This web site has some subtext that goes here under the main title.
                         It's
                         a smaller font and the color
@@ -38,7 +38,7 @@
                 </div>
                 <div class="header-section-image">
                     <div class="image-container">
-                        <p>This is the palace holder for image </p>
+                        <img src="asset/1.jpg" alt="">
                     </div>
                 </div>
             </div>
@@ -51,30 +51,30 @@
             </div>
             <div class="content-container-body">
                 <div class="item">
-
+                    <img src="asset/2.jpg" />
                 </div>
                 <div class="item">
-
+                    <img src="asset/5.jpg" />
                 </div>
                 <div class="item">
-
+                    <img src="asset/3.jpg" />
                 </div>
                 <div class="item">
-
+                    <img src="asset/4.jpg" />
                 </div>
             </div>
             <div class="content-container-body-text">
                 <div>
-                    <p>This is some subtext under un illustration or image</p>
+                    <p>Rose flower one </p>
                 </div>
                 <div>
-                    <p>This is some subtext under un illustration or image</p>
+                    <p>Rose flower two </p>
                 </div>
                 <div>
-                    <p>This is some subtext under un illustration or image</p>
+                    <p>Rose flower three </p>
                 </div>
                 <div>
-                    <p>This is some subtext under un illustration or image</p>
+                    <p>Rose flower four </p>
                 </div>
             </div>
         </div>
@@ -82,11 +82,11 @@
     <section>
         <div class="quote-container">
             <p class="quote">
-                This is an inspiration quote , or a testimonial form a custommer. Maybe its' just filling up space , or
-                maybe people actualy read it . Who knows ? AllI know is that look nice.
+                “I'm selfish, impatient and a little insecure. I make mistakes, I am out of control and at times hard to
+                handle. But if you can't handle me at my worst, then you sure as hell don't deserve me at my best.”
             </p>
             <p class="quote-owner">
-                -Thor , God of Thunder
+                ― Marilyn Monroe
             </p>
         </div>
     </section>
