button stsyle medfied

--- a/index.html
+++ b/index.html
@@ -10,19 +10,19 @@
             <div class="page-title">Hagi Rose</div>
             <div class="nav">
                 <div class="nav-item">
-                    Home
+                    <a href="#">Home</a>
                 </div>
                 <div class="nav-item">
-                    About
+                    <a href="#">About</a>
                 </div>
                 <div class="nav-item">
-                    Contact
+                    <a href="#">Contact</a>
                 </div>
                 <div class="nav-item">
-                    Profile
+                    <a href="#">Profile</a>
                 </div>
                 <div class="nav-item">
-                    Setting
+                    <a href="#">Setting</a>
                 </div>
             </div>
         </div>
